--- a/4x4.html
+++ b/4x4.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SEEN - Gameplay 4x4</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
   <!-- Header -->
@@ -72,8 +72,8 @@
     </div>
   </div>
 
-  <script src="../assets/js/main.js" defer></script>
-  <script type="module" src="../assets/js/game-init.js"></script>
+  <script src="assets/js/main.js" defer></script>
+  <script type="module" src="assets/js/game-init.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
