--- a/8x8.html
+++ b/8x8.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SEEN - Gameplay 6x6</title>
+  <title>SEEN - Gameplay 8x8</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
   <!-- Header -->
@@ -28,8 +28,8 @@
       </button>
     </section>
 
-    <!-- Game Board 6x6 -->
-    <section id="board" role="grid" aria-label="6 by 6 game board" class="board" data-size="6">
+    <!-- Game Board 8x8 -->
+    <section id="board" role="grid" aria-label="8 by 8 game board" class="board" data-size="8">
     </section>
   </main>
 
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- Cancel Confirmation Modal -->
   <div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -72,8 +72,8 @@
     </div>
   </div>
 
-  <script src="../assets/js/main.js" defer></script>
-  <script type="module" src="../assets/js/game-init.js"></script>
+  <script src="assets/js/main.js" defer></script>
+  <script type="module" src="assets/js/game-init.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
