--- a/theme.html
+++ b/theme.html
@@ -21,15 +21,15 @@
     <!-- Theme Options -->
     <div class="row row-cols-4 g-3 justify-content-center gap-2">
       <a class="card card--theme" href="speed.html" data-theme="fruits">
-        <img src="../assets/img/front-img/fruit.png" class="img-fluid" alt="Fruit">
+        <img src="assets/img/front-img/fruit.png" class="img-fluid" alt="Fruit">
         <p>Fruit</p>
       </a>
       <a class="card card--theme" href="speed.html" data-theme="animals">
-        <img src="../assets/img/front-img/animal.png" class="img-fluid" alt="Animal">
+        <img src="assets/img/front-img/animal.png" class="img-fluid" alt="Animal">
         <p>Animal</p>
       </a>
       <a class="card card--theme" href="speed.html" data-theme="symbols">
-        <img src="../assets/img/front-img/symbol.png" class="img-fluid" alt="Symbol">
+        <img src="assets/img/front-img/symbol.png" class="img-fluid" alt="Symbol">
         <p>Symbol</p>
       </a>
     </div>
