add functionality on seen logo

--- a/results.html
+++ b/results.html
@@ -10,7 +10,9 @@
 <body>
   <!-- Header -->
   <header class="navbar container">
-    <h3 class="logo">SEEN</h3>
+    <h3 class="logo">
+      <a href="index.html" aria-label="SEEN Home">SEEN</a>
+    </h3>
   </header>
     
   <main class="container">
