--- a/6x6.html
+++ b/6x6.html
@@ -10,7 +10,9 @@
 <body>
   <!-- Header -->
   <header class="navbar container">
-    <h3 class="logo">SEEN</h3>
+    <h3 class="logo">
+      <a href="size.html" aria-label="Menu">SEEN</a>
+    </h3>
   </header>
 
   <main class="container game-container text-center py-4">
@@ -22,9 +24,14 @@
         <div>Time: <span id="time">00:00</span></div>
       </div>
 
+      <!-- Reset Button -->
+      <button type="reset" class="btn btn-reset btn-secondary" data-bs-toggle="modal" data-bs-target="#resetModal" aria-label="Reset">
+        &#x21BA;
+      </button>
+
       <!-- Cancel Button -->
-      <button type="button" class="btn btn-icon btn-secondary" data-bs-toggle="modal" data-bs-target="#cancelModal" aria-label="Cancel">
-        &#x2716; <!-- cross symbol -->
+      <button type="button" class="btn btn-cancel btn-secondary" data-bs-toggle="modal" data-bs-target="#cancelModal" aria-label="Cancel">
+        &#x2716; 
       </button>
     </section>
 
@@ -33,13 +40,31 @@
     </section>
   </main>
 
+<!-- Reset Confirmation Modal -->
+  <div class="modal fade" id="resetModal" tabindex="-1" aria-labelledby="resetModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="resetModalLabel">Confirm Reset</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to reset all fields?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" id="confirmReset" class="btn btn-warning">Reset</button>
+      </div>
+    </div>
+  </div>
+</div>
+
   <!-- WIN Results Modal -->
   <div class="modal fade" id="winModal" tabindex="-1" aria-labelledby="winModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content text-center">
         <div class="modal-header border-0">
           <h5 class="modal-title w-100" id="winModalLabel">You Remembered!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <p class="mb-2">Final Time: <strong class="final-time">--:--</strong></p>
@@ -52,7 +77,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- Cancel Confirmation Modal -->
   <div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -81,6 +106,22 @@
       confirmBtn.addEventListener('click', () => {
         window.location.href = 'index.html';
       });
+
+      const resetBtn = document.getElementById('confirmReset');
+      if (resetBtn) {
+        resetBtn.addEventListener('click', () => {
+          if (window.game && typeof window.game.reset === 'function') {
+            window.game.reset({reshuffle: true});
+          } else {
+            window.location.reload();
+          }
+          const resetModalEl = document.getElementById('resetModal');
+          if (window.bootstrap && resetModalEl) {
+            const modal = bootstrap.Modal.getInstance(resetModalEl) || new bootstrap.Modal(resetModalEl);
+            modal.hide();
+            }
+        });
+      }
     });
   </script>
 </body>
