--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </nav>
   </header>
 
-  <main class="container">
+  <main class="container py-5">
     <!-- Hero Section -->
-    <section class="hero text-left">
+    <section class="hero text-start text-md-left">
       <h1 class="title mb-4">SEEN</h1>
       <div class="design-boxes" aria-hidden="true">
         <div class="box h-4"></div>
@@ -36,30 +36,33 @@
         <div class="box h-41"></div>
         <div class="box h-104"></div>
       </div>
-      <p class="tagline">Train Smarter. Think Sharper.</p>
+      <p class="tagline mt-4">Train Smarter. Think Sharper.</p>
     </section>
 
     <div class="divider"></div>
 
     <!-- Features Section -->
-    <section class="features row g-4">
-      <div class="feature col-md-12">
-        <h3>Boost Your Focus</h3>
-        <p>A memory card game built to sharpen your brain.</p>
-      </div>
-      <div class="feature col-md-12">
-        <h3>Challenge Your Memory</h3>
-        <p>Test your recall with increasingly difficult levels.</p>
-      </div>
-      <div class="feature col-md-12">
-        <h3>Play With Purpose</h3>
-        <p>Each round enhances focus and cognitive flexibility.</p>
-      </div>
-      <div class="feature col-md-12">
-        <h3>Track Your Progress</h3>
-        <p>See how your memory evolves with your scores.</p>
+    <section class="features container my-5">
+      <div class="row g-4">
+        <div class="col-md-6">
+          <h3>Boost Your Focus</h3>
+          <p>A memory card game built to sharpen your brain.</p>
+        </div>
+        <div class="col-md-6">
+          <h3>Challenge Your Memory</h3>
+          <p>Test your recall with increasingly difficult levels.</p>
+        </div>
+        <div class="col-md-6">
+          <h3>Play With Purpose</h3>
+          <p>Each round enhances focus and cognitive flexibility.</p>
+        </div>
+        <div class="col-md-6">
+          <h3>Track Your Progress</h3>
+          <p>See how your memory evolves with your scores.</p>
+        </div>
       </div>
     </section>
+
 
     <div class="divider"></div>
 
@@ -72,7 +75,7 @@
     <div class="divider"></div>
 
     <!-- Call-to-Action -->
-    <section class="cta text-center">
+    <section class="cta d-flex flex-column align-items-center">
       <p><strong>Flip, match, and outthink your own memory.</strong></p>
       <a href="size.html" class="btn btn-primary">PLAY FOR FREE</a>
     </section>
